6969574: invokedynamic call sites deoptimize instead of executing

Reviewed-by: kvn